req finished, mvp getting close

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Underpants</title>
+  <title>To do list</title>
   <meta name="keywords" content="underpants">
   <meta name="description" content="A uxdev-oriented seed with the bleeding edge tech and a component based mindset">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <h1>Underpants</h1>
+    <h1>Todo list</h1>
   </header>
   <main role="main">
     <!-- build:include src/templates/main.html-->
